syntax = "proto3";

package blogchain.blog.v1;

import "gogoproto/gogo.proto";

option go_package = "blogchain/x/blog/types";

// Comment defines a comment on a post or another comment
message Comment {
  uint64 id = 1;
  uint64 post_id = 2;
  uint64 parent_id = 3; // 0 for root comments, comment_id for replies
  string creator = 4;
  string content = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
  uint64 likes = 8;
  bool deleted = 9;
  int64 deleted_at = 10;
  uint32 depth = 11; // Nesting depth (0 for root, 1 for first-level reply, etc.)
}

// CommentThread represents a comment with its replies
message CommentThread {
  Comment comment = 1 [(gogoproto.nullable) = false];
  repeated CommentThread replies = 2;
}

// CommentStats tracks comment statistics for a post
message CommentStats {
  uint64 post_id = 1;
  uint64 total_comments = 2;
  uint64 active_comments = 3;
  int64 last_comment_at = 4;
}